Tweaking header fixing on mobile and desktop.

--- a/css/main.css
+++ b/css/main.css
@@ -7549,6 +7549,9 @@ header.affix .container .icon-logo {
   width: 100%;
   height: 415px;
 }
+.fixed-header #about {
+  margin-top: 110px;
+}
 @media (min-width: 768px) {
   .section#supporters h1 strong {
     font-size: 65px;
@@ -7598,6 +7601,9 @@ header.affix .container .icon-logo {
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
+  }
+  .fixed-header #about {
+    margin-top: 220px;
   }
 }
 @media (min-width: 1200px) {
