--- a/less/content.less
+++ b/less/content.less
@@ -384,6 +384,11 @@
 	height: 415px;
 }
 
+.fixed-header {
+	#about {
+		margin-top: 110px;
+	}
+}
 
 @media (min-width: @screen-sm-min) {
 	.section {
@@ -481,6 +486,12 @@
 					}
 				}
 			}
+		}
+	}
+
+	.fixed-header {
+		#about {
+			margin-top: 220px;
 		}
 	}
 }
